force-app/main/default/objects/Settings__mdt/fields/Box_Client_Id__c.field-meta.xml
<CustomField>
    <fullName>Box_Client_Id__c</fullName>
    <label>Box Client Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>