force-app/main/default/objects/Settings__mdt/fields/Box_Yardi_Bridge_Folder_Id__c.field-meta.xml
<CustomField>
    <fullName>Box_Yardi_Bridge_Folder_Id__c</fullName>
    <label>Box Yardi Bridge Folder Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>