force-app/main/default/objects/Settings__mdt/fields/Bridge_Sec_Diligence_Review_Email_CC__c.field-meta.xml
<CustomField>
    <fullName>Bridge_Sec_Diligence_Review_Email_CC__c</fullName>
    <description>These are the CC: email addresses for when a Deal is added to an RTL Warehouse Line</description>
    <inlineHelpText>These are the CC: email addresses for when a Deal is added to an RTL Warehouse Line</inlineHelpText>
    <label>Bridge Sec Diligence Review Email CC</label>
    <type>TextArea</type>
</CustomField>