force-app/main/default/objects/Settings__mdt/fields/Bridge_Sec_Diligence_Review_Email_To__c.field-meta.xml
<CustomField>
    <fullName>Bridge_Sec_Diligence_Review_Email_To__c</fullName>
    <description>These are the To: email addresses for when a Deal is added to an RTL Warehouse Line</description>
    <inlineHelpText>These are the To: email addresses for when a Deal is added to an RTL Warehouse Line</inlineHelpText>
    <label>Bridge Sec Diligence Review Email To</label>
    <length>255</length>
    <type>Text</type>
</CustomField>