force-app/main/default/objects/Settings__mdt/fields/Construction_Manager_Acquired_Loans__c.field-meta.xml
<CustomField>
    <fullName>Construction_Manager_Acquired_Loans__c</fullName>
    <description>This is the User ID of the Construction Manager for acquired Bridge Loans</description>
    <inlineHelpText>This is the User ID of the Construction Manager for acquired Bridge Loans</inlineHelpText>
    <label>Construction Manager Acquired Loans</label>
    <length>75</length>
    <type>Text</type>
</CustomField>