force-app/main/default/objects/Settings__mdt/fields/Construction_Manager_CV_Originated__c.field-meta.xml
<CustomField>
    <fullName>Construction_Manager_CV_Originated__c</fullName>
    <description>This is the User ID of the Construction Manager for CoreVest originated Bridge Loans</description>
    <inlineHelpText>This is the User ID of the Construction Manager for CoreVest originated Bridge Loans</inlineHelpText>
    <label>Construction Manager CV Originated</label>
    <length>75</length>
    <type>Text</type>
</CustomField>