force-app/main/default/objects/Settings__mdt/fields/Enable_Yardi_API__c.field-meta.xml
<CustomField>
    <fullName>Enable_Yardi_API__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enable Yardi API</label>
    <type>Checkbox</type>
</CustomField>