force-app/main/default/objects/Settings__mdt/fields/Send_Email_for_Bridge_Securitization_Rev__c.field-meta.xml
<CustomField>
    <fullName>Send_Email_for_Bridge_Securitization_Rev__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enable the email alert to the addresses listed below when a Deal is added to a RTL Warehouse Line</description>
    <inlineHelpText>Enable the email alert to the addresses listed below when a Deal is added to a RTL Warehouse Line</inlineHelpText>
    <label>Send Email for Bridge Securitization Rev</label>
    <type>Checkbox</type>
</CustomField>