force-app/main/default/objects/Settings__mdt/fields/Yardi_Database__c.field-meta.xml
<CustomField>
    <fullName>Yardi_Database__c</fullName>
    <label>Yardi Database</label>
    <length>255</length>
    <type>Text</type>
</CustomField>