force-app/main/default/objects/Settings__mdt/fields/Yardi_Interface_Entity__c.field-meta.xml
<CustomField>
    <fullName>Yardi_Interface_Entity__c</fullName>
    <label>Yardi Interface Entity</label>
    <length>255</length>
    <type>Text</type>
</CustomField>