force-app/main/default/objects/Settings__mdt/fields/Yardi_Interface_License__c.field-meta.xml
<CustomField>
    <fullName>Yardi_Interface_License__c</fullName>
    <label>Yardi Interface License</label>
    <length>255</length>
    <type>Text</type>
</CustomField>