force-app/main/default/objects/Settings__mdt/fields/Yardi_Interface_License_Long__c.field-meta.xml
<CustomField>
    <fullName>Yardi_Interface_License_Long__c</fullName>
    <label>Yardi Interface License Long</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>