force-app/main/default/objects/Settings__mdt/fields/Yardi_Password__c.field-meta.xml
<CustomField>
    <fullName>Yardi_Password__c</fullName>
    <label>Yardi Password</label>
    <length>255</length>
    <type>Text</type>
</CustomField>