force-app/main/default/objects/Settings__mdt/fields/Yardi_Platform__c.field-meta.xml
<CustomField>
    <fullName>Yardi_Platform__c</fullName>
    <label>Yardi Platform</label>
    <length>255</length>
    <type>Text</type>
</CustomField>