force-app/main/default/objects/Settings__mdt/fields/Yardi_Server_Name__c.field-meta.xml
<CustomField>
    <fullName>Yardi_Server_Name__c</fullName>
    <label>Yardi Server Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>