force-app/main/default/objects/Settings__mdt/fields/Yardi_URL__c.field-meta.xml
<CustomField>
    <fullName>Yardi_URL__c</fullName>
    <label>Yardi URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>