force-app/main/default/objects/Settings__mdt/fields/Yardi_Username__c.field-meta.xml
<CustomField>
    <fullName>Yardi_Username__c</fullName>
    <label>Yardi Username</label>
    <length>255</length>
    <type>Text</type>
</CustomField>